<resources>
    <string name="app_name">BIP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading</string>
    <string name="logo">Logo</string>
    <string name="home">Home</string>
    <string name="log_in_with">Log in With</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="or_log_in_with_credentials">Or log in with credentials</string>
    <string name="password">Password</string>
    <string name="register_for_free_with">Register for free with</string>
    <string name="or_register_with_details">Or register with details</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="i_agree_with">I agree with</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="register">Register</string>
    <string name="already_a_user">Already a user?</string>
    <string name="login">Login</string>
    <string name="reset_password_for_your_account">Reset password for your account</string>
    <string name="go_back">Go back</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_registered_email_id">Enter Your Registered Email ID</string>
    <string name="todo">TODO</string>
    <string name="hello_xxxxx">Hello xxxxx</string>
    <string name="search_for_subject_you_want_to_learn">Search for subject you want to learn</string>
    <string name="join_a_live_stream">Join a live stream</string>
    <string name="categories">Categories</string>
    <string name="see_all">See all</string>
    <string name="marketing">Marketing</string>
    <string name="bussiness">Bussiness</string>
    <string name="mathematics">Mathematics</string>
    <string name="design">Design</string>
    <string name="newest">Newest</string>
    <string name="popular">Popular</string>
    <string name="fratured">Fratured</string>
    <string name="ux_design">UX design</string>
    <string name="_4_2">4.2</string>
    <string name="all_categories">All categories</string>
    <string name="_30_courses">30 courses</string>
    <string name="web_amp_app_design_basic">Web amp app design basic</string>
    <string name="ui_amp_ux_thinking_nfor_beginners5">UI amp ux thinking for beginners</string>
    <string name="illustrator_cc_n2020_masterclass2">Illustrator cc 2020 masterclass</string>
    <string name="art_and_illustration">Art and illustration</string>
    <string name="character_art_nschool_courses">Character art school courses</string>
    <string name="the_ultimate_ndrawing_course">The ultimate drawing course</string>
    <string name="live_stream">Live stream</string>
    <string name="search">Search</string>
    <string name="build_a_landing_page_with_elementor_step_by_step">Build a landing page with elementor step by step</string>
    <string name="by_fbplamachine">By FbpLaMachine</string>
    <string name="create_a_bussiness_website_with_wordpress_with_this_quick_5_step_guide">Create business website with wordpress this quick 5 step guide</string>
    <string name="by_xxx_yyy">By XXX YYY</string>
    <string name="_12_99">1250.99 XAF</string>
    <string name="uiAndUx2">UI And UX Thinking for beginner</string>
    <string name="uiAndU">UI And UX Thinking</string>
    <string name="this_course_includes">This course includes</string>
    <string name="_5_hours_on_demand_video">5 hours on demand video</string>
    <string name="watch_on_total_5_hours_on_demand_video">Watch on total 5 hours on demand video</string>
    <string name="_1_article">1 article</string>
    <string name="total_1_easy_to_understand_article">Total 1 easy to understand article</string>
    <string name="_1_downloadable_resource">1 downloadable ressource</string>
    <string name="total_1_lifetime_downloadable_resource">Total 1 lifetime downloadable ressource</string>
    <string name="requirements">Requirements</string>
    <string name="desciption">Description</string>
    <string name="windows_10_or_macos_n_adobe_xd_i_ll_show_you_how_to_install_it_for_free">Windows 10 or macos and adobe xd i ll show you how to install it for free</string>
    <string name="buy_now">Buy now</string>
    <string name="share">Share</string>
    <string name="my_courses">My courses</string>
    <string name="illustrator_cc_n2020_masterclass">Illustrator CC 2020 masterclass</string>
    <string name="payment">Payment</string>
    <string name="cardNumber">Card Number</string>
    <string name="nameHint">XXXXX YYYYY</string>
    <string name="cardNumberHint">1000 1000 1000 1000</string>
    <string name="expiry">Expiry Date</string>
    <string name="expHint">00-00</string>
    <string name="CVC">CVC</string>
    <string name="cVCHint">000</string>
    <string name="save">Save this card</string>
    <string name="checkout">Or Checkout With</string>
    <string name="total">TOTAL</string>
    <string name="cost">2500.99 XAF</string>
    <string name="ConfirmPayment">CONFIRM PAYMENT</string>
    <string name="backToCart">BACK TO CARD</string>
    <string name="Cart">Cart</string>
    <string name="Continue">Continue</string>
    <string name="my_wish_list">My wishlist</string>
    <string name="oops_it_s_empty">Oops It\'s Empty</string>
    <string name="let_s_fill_in">Let\'is fill in</string>
    <string name="from_here">From Here</string>
    <string name="about">About</string>
    <string name="comments">Comments</string>
    <string name="in_this_tutorial_we_ll_be_building_a_stylish_landing_page_with_elementor_n_nmade_100_in_elementor_in_this_a_to_z_tutorial_you_ll_learn_n_n_creating_a_page_n_building_a_wordpress_menu">"In this tutorial we ll be building  a stylish landing page with elementor and made 100 in elementor in this A to Z tutorial you ll learn and creating a page and building a wordpress menu "</string>
    <string name="other_lives">Other Lives</string>
    <string name="create_a_business_website_with_wordpress">Create a business website with wordpress</string>
    <string name="success">Sucess!</string>
    <string name="successfulPayment">You successfull made a payment</string>
    <string name="startCourse">Start Course Now</string>
    <string name="backToHome">Back to Home</string>
    <string name="back">Back</string>
    <string name="lectures">Lectures</string>
    <string name="resource">Ressources</string>
    <string name="num1">01</string>
    <string name="time1">5:35 mins</string>
    <string name="welcomeToTheCourse">Welcome to the Course</string>
    <string name="num2">02</string>
    <string name="time2">19:04 mins</string>
    <string name="intro">Design thinking - Intro</string>
    <string name="num3">03</string>
    <string name="time3">30:35 mins</string>
    <string name="num4">04</string>
    <string name="num5">05</string>
    <string name="what_do_you_want_to_learn">What do you want to learn ?</string>
    <string name="xxxxx_xy_yyyyy">XXXXX XY YYYYY</string>
    <string name="xxxxxyyyy_gmail_com">xxxxxxy@gmail.com</string>
    <string name="account_settings">Account Settings</string>
    <string name="account_security">Account Security</string>
    <string name="support">Support</string>
    <string name="about_academy">About BIP</string>
    <string name="help_and_feedback">Help and Feedback</string>
    <string name="contact_us">Contact US</string>
    <string name="share_the_academy_app">Share the BIP App</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_new_account">Create new account</string>
    <string name="log_in">Log In</string>
</resources>