<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fillViewport="true"
    android:orientation="vertical"
    android:paddingTop="@dimen/dp_6">


    <RelativeLayout
        android:id="@+id/ly_manager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_32"
            android:elevation="@dimen/dp_2"
            app:cardCornerRadius="@dimen/dp_6"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/dp_16"
                android:paddingHorizontal="@dimen/dp_16"
                >


                <TextView
                    android:id="@+id/textRegisterForFree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp_24"
                    android:layout_marginBottom="@dimen/dp_12"
                    android:textColor="#c7c7c7"
                    android:gravity="center_horizontal"
                    android:text="@string/register_for_free_with" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_12"
                    android:orientation="horizontal"
                    android:paddingVertical="@dimen/dp_6"
                    android:weightSum="2">


                    <LinearLayout
                        android:id="@+id/layoutGmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginVertical="@dimen/dp_4"
                        android:layout_marginStart="@dimen/dp_16"
                        android:layout_marginEnd="@dimen/dp_12"
                        android:layout_weight="1"
                        android:background="@drawable/bg_btn_google_fb"
                        android:elevation="@dimen/dp_2"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:padding="@dimen/dp_8"

                        >

                        <ImageView
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/goolge_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginHorizontal="@dimen/dp_6"
                            android:gravity="center_horizontal"
                            android:text="@string/google"
                            android:textColor="#9d9d9d" />

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/layoutFacebook"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginVertical="@dimen/dp_4"
                        android:layout_marginStart="@dimen/dp_12"
                        android:layout_marginEnd="@dimen/dp_16"
                        android:layout_weight="1"
                        android:background="@drawable/bg_btn_google_fb"
                        android:elevation="@dimen/dp_2"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:padding="@dimen/dp_8">

                        <ImageView
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/fb_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginHorizontal="@dimen/dp_6"
                            android:gravity="center_horizontal"
                            android:text="@string/facebook"
                            android:textColor="#9d9d9d" />

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_marginBottom="@dimen/dp_16"
                    android:background="#efefef" />


                <TextView
                    android:id="@+id/textOrRegisterWith"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_marginBottom="@dimen/dp_6"
                    android:gravity="center_horizontal"
                    android:textColor="#c7c7c7"
                    android:text="@string/or_register_with_details" />


                <EditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_16"
                    android:background="@drawable/bg_btn_google_fb"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="@dimen/dp_12"
                    android:elevation="@dimen/dp_2"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:textColor="#b9b9b9"
                    android:textColorHint="#b9b9b9"
                    android:textSize="@dimen/sp_14"
                    android:paddingHorizontal="@dimen/dp_6"
                    android:paddingVertical="@dimen/dp_8" />


                <EditText
                    android:id="@+id/userEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_18"
                    android:background="@drawable/bg_btn_google_fb"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="@dimen/dp_12"
                    android:elevation="@dimen/dp_2"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:textColor="#b9b9b9"
                    android:textColorHint="#b9b9b9"
                    android:textSize="@dimen/sp_14"

                    android:paddingHorizontal="@dimen/dp_6"
                    android:paddingVertical="@dimen/dp_8" />


                <EditText
                    android:id="@+id/userPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_16"
                    android:background="@drawable/bg_btn_google_fb"
                    android:drawableStart="@drawable/ic_baseline_lock_open_24"
                    android:drawablePadding="@dimen/dp_12"
                    android:elevation="@dimen/dp_2"
                    android:hint="@string/password"
                    android:textSize="@dimen/sp_14"
                    android:inputType="textPassword"
                    android:textColor="#b9b9b9"
                    android:textColorHint="#b9b9b9"
                    android:paddingHorizontal="@dimen/dp_6"
                    android:paddingVertical="@dimen/dp_8" />


                <EditText
                    android:id="@+id/userConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_16"
                    android:background="@drawable/bg_btn_google_fb"
                    android:drawableStart="@drawable/ic_baseline_lock_open_24"
                    android:drawablePadding="@dimen/dp_12"
                    android:elevation="@dimen/dp_2"
                    android:textColor="#b9b9b9"
                    android:textColorHint="#b9b9b9"
                    android:textSize="@dimen/sp_14"
                    android:inputType="textPassword"
                    android:hint="@string/re_enter_password"
                    android:paddingHorizontal="@dimen/dp_6"
                    android:paddingVertical="@dimen/dp_8" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_12"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkPrivacy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="#c7c7c7"
                        android:textColor="#c7c7c7"
                        android:text="@string/i_agree_with" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_8"
                        android:text="@string/privacy_policy"
                        android:textColor="#54e4d6" />


                </LinearLayout>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_marginBottom="@dimen/dp_12"
                    android:background="@drawable/bg_register_btn"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/dp_8"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/textAlredyHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardRegister"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_6"
            android:gravity="center_horizontal"
            android:text="@string/already_a_user"
            android:paddingEnd="@dimen/dp_16"/>


        <TextView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:onClick="loginTextClick"
            android:id="@+id/textLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardRegister"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_toEndOf="@id/textAlredyHaveAccount"
            android:text="@string/login"
            android:layout_marginStart="-12dp"
            android:textColor="@color/black"
            android:focusable="true" />


    </RelativeLayout>
</ScrollView>